# Lima-camera-pointgrey

./: CMakeLists.txt
doc/: index.rst
include/: PointGreyBinCtrlObj.h  PointGreyCamera.h  PointGreyDetInfoCtrlObj.h  PointGreyInterface.h  PointGreyRoiCtrlObj.h  PointGreySyncCtrlObj.h  PointGreyVideoCtrlObj.h
python/: PointGrey.py  __init__.py
sip/: PointGreyCamera.sip  PointGreyInterface.sip
src/: Makefile  PointGreyBinCtrlObj.cpp  PointGreyCamera.cpp  PointGreyDetInfoCtrlObj.cpp  PointGreyInterface.cpp  PointGreyRoiCtrlObj.cpp  PointGreySyncCtrlObj.cpp  PointGreyVideoCtrlObj.cpp
test/: Makefile  PgTest.P  PgTest.cpp  pgtest  pgtest.py
